--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -8,6 +8,8 @@
     tools:context="com.tbailey.tim.literatura.BookListActivity">
 
 
+
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -22,6 +24,16 @@
             android:layout_alignParentLeft="true"
             android:text="Score"
             android:textSize="20sp" />
+
+        <TextView
+            android:id="@+id/tvTitle"
+            android:layout_width="151dp"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:layout_gravity="center"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:textSize="32sp" />
 
         <TextView
             android:id="@+id/score"
@@ -89,6 +101,13 @@
         android:padding="8dp"
         android:layout_marginBottom="24dp"
         android:id="@+id/choice4"
-        style="@style/Widget.AppCompat.Button.Colored" />/>
+        style="@style/Widget.AppCompat.Button.Colored" />
+
+    <ProgressBar
+        android:id="@+id/progress"
+        style="?android:attr/progressBarStyle"
+        android:layout_gravity="center"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />/>
 
 </LinearLayout>
