--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -49,7 +49,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="70dp"
-        android:text="Who wrote 'Things Fall Apart'?"
+        android:text=""
         android:textSize="20sp"
         android:padding="8dp"
         android:layout_marginBottom="40dp"
@@ -58,7 +58,7 @@
     <Button
         android:layout_width="360dp"
         android:layout_height="wrap_content"
-        android:text="Wole Soyinka"
+        android:text=""
         android:background="#A9A9A9"
         android:layout_gravity="center"
         android:textColor="#000000"
@@ -70,7 +70,7 @@
     <Button
         android:layout_width="360dp"
         android:layout_height="wrap_content"
-        android:text="Chinua Achebe"
+        android:text=""
         android:background="#A9A9A9"
         android:layout_gravity="center"
         android:textColor="#000000"
@@ -82,7 +82,7 @@
     <Button
         android:layout_width="360dp"
         android:layout_height="wrap_content"
-        android:text="Nadine Gordimer"
+        android:text=""
         android:background="#A9A9A9"
         android:layout_gravity="center"
         android:textColor="#000000"
@@ -94,7 +94,7 @@
     <Button
         android:layout_width="360dp"
         android:layout_height="wrap_content"
-        android:text="Ngugi wa Thiong'o"
+        android:text=""
         android:background="#A9A9A9"
         android:layout_gravity="center"
         android:textColor="#000000"
